[project]
name = "basic-reflection-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "certifi>=2025.10.5",
    "chromadb>=1.3.0",
    "fastapi>=0.120.1",
    "grandalf>=0.8",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.22",
    "langchain-community>=0.3.30",
    "langchain-google-genai>=2.1.12",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-milvus>=0.2.1",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "langchain-text-splitters>=0.3.11",
    "langchainhub>=0.1.21",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "mcp>=1.20.0",
    "milvus-lite>=2.5.1",
    "python-dotenv>=1.1.1",
    "websockets>=15.0.1",
]
